<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_air_tikets"
        android:icon="@drawable/airport"
        android:title="@string/title_air_tikets"/>

    <item
        android:id="@+id/navigation_hotels"
        android:icon="@drawable/hotel"
        android:title="@string/title_hotels" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/location"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/notifications"
        android:title="@string/title_subscriptions"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile"/>

</menu>