<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_air_tikets">

    <fragment
        android:id="@+id/navigation_air_tikets"
        android:name="com.example.effectivemobile.ui.airtikets.AirTickets"
        android:label="@string/title_air_tikets"
        tools:layout="@layout/fragment_air_tikets">
        <action
            android:id="@+id/action_navigation_air_tikets_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_hotels"
        android:name="com.example.effectivemobile.ui.hotels.HotelsFragment"
        android:label="@string/title_hotels"
        tools:layout="@layout/fragment_hotels" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.effectivemobile.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map"/>

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="com.example.effectivemobile.ui.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_subscriptions"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.effectivemobile.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.effectivemobile.ui.airtikets.Search"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_navigation_air_tikets"
            app:destination="@id/navigation_air_tikets" />
        <action
            android:id="@+id/action_searchFragment_to_allTickets"
            app:destination="@id/allTickets" />
    </fragment>
    <fragment
        android:id="@+id/allTickets"
        android:name="com.example.effectivemobile.ui.airtikets.AllTickets"
        android:label="fragment_all_tickets"
        tools:layout="@layout/fragment_all_tickets" >
        <action
            android:id="@+id/action_allTickets_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
</navigation>